--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "morgan": "~1.9.1",
+    "node-cron": "^3.0.0",
     "request": "^2.88.2"
   }
 }
