--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "morgan": "~1.9.1",
     "node-cron": "^3.0.0",
     "paytmchecksum": "^1.5.0",
+    "payumoney_nodejs": "^2.0.4",
     "request": "^2.88.2",
+    "sha512": "^0.0.1",
+    "systeminformation": "^5.11.0",
     "uuid": "^8.3.2"
   }
 }
