--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "js-sha512": "^0.8.0",
     "jsonwebtoken": "^8.5.1",
+    "jssha": "^3.2.0",
     "mongoose": "^6.0.8",
     "morgan": "~1.9.1",
     "node-cron": "^3.0.0",
