--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.0.8",
     "morgan": "~1.9.1",
     "node-cron": "^3.0.0",
+    "nodemon": "^2.0.16",
     "paytmchecksum": "^1.5.0",
     "payumoney_nodejs": "^2.0.4",
     "request": "^2.88.2",
